Fix issues found by multiple test